# krill-rs

./: Cargo.toml  LICENSE  README.md
examples/: delete.http  dynamic.http  get.http  get_notfound.http  post.http  variables.http
examples/include/: body.tmpl  request.http
src/: context.rs  main.rs  output.rs  parser.rs
