[package]
name = "krill-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
fake = { version = "2.10.0", features = ["http", "random_color", "semver", "uuid"] }
handlebars = "6.1.0"
reqwest = { version = "0.12.8", features = ["blocking"] }
serde_json = "1.0.128"

[[bin]]
name = "krill"
path = "src/main.rs"
